# DroidClaw

./: .gitignore  AndroidManifest.xml  CONTRIBUTING.md  README.md  build.gradle.kts  local.properties  proguard-rules.pro  settings.gradle.kts
app/: build.gradle.kts
app/src/main/kotlin/com/droidclaw/app/: MainActivity.kt
app/src/main/res/values/: strings.xml
bridge/: build.gradle.kts
bridge/src/main/kotlin/com/droidclaw/bridge/: NativeToolExecutor.kt  PermissionGuard.kt  ToolRegistry.kt
bridge/src/main/kotlin/com/droidclaw/bridge/accessibility/: AccessibilityTreeReader.kt  DroidClawAccessibilityService.kt  (+3 more)
bridge/src/test/kotlin/com/droidclaw/bridge/: ToolRegistryTest.kt
core/: build.gradle.kts
core/src/main/kotlin/com/droidclaw/core/: AppConfig.kt  ModelRegistry.kt
docs/: architecture.md  features.md
gradle/: libs.versions.toml
kotlin/com/droidclaw/app/: AgentForegroundService.kt  DroidClawApp.kt
llm/: build.gradle.kts
llm/src/main/assets/: hf_models.json
llm/src/main/cpp/: CMakeLists.txt  llama_inference_stub.cpp
llm/src/main/kotlin/com/droidclaw/llm/: DeviceTierDetector.kt  LlamaServer.kt  ModelManager.kt  NativeBinaryHelper.kt
llm/src/test/kotlin/com/droidclaw/llm/: DeviceTierDetectorTest.kt  ModelManagerTest.kt
orchestrator/: build.gradle.kts
orchestrator/src/main/kotlin/com/droidclaw/orchestrator/: AgentLoopService.kt  HeartbeatScheduler.kt
res/values/: colors.xml  themes.xml
res/xml/: accessibility_service.xml  network_security_config.xml
ui/: build.gradle.kts
ui/src/main/kotlin/com/droidclaw/ui/: AppScaffold.kt
(+57 files in other folders)
